--- a/dsmoviehtml/index.html
+++ b/dsmoviehtml/index.html
@@ -22,6 +22,19 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section id="dsmvoie-card-list" class="container">
+            <div class="dsmovie-card">
+                <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                    alt="Motoqueiro Fantasma">
+                <div class="dsmove-card-description">
+                    <h3>Motoqueiro Fantamas</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
+            </div>
+        </section>
+
+    </main>
 </body>
 
 </html>
