Listagem de cards

--- a/dsmoviehtml/index.html
+++ b/dsmoviehtml/index.html
@@ -24,12 +24,130 @@
     </header>
     <main>
         <section id="dsmvoie-card-list" class="container">
-            <div class="dsmovie-card">
-                <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                    alt="Motoqueiro Fantasma">
-                <div class="dsmove-card-description">
-                    <h3>Motoqueiro Fantamas</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+            <div class="row">
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
+                            alt="Motoqueiro Fantasma">
+                        <div class="dsmove-card-description">
+                            <h3>Motoqueiro Fantamas</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
