Listagem de card 2

--- a/dsmoviehtml/index.html
+++ b/dsmoviehtml/index.html
@@ -25,7 +25,6 @@
     <main>
         <section id="dsmvoie-card-list" class="container">
             <div class="row">
-
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
@@ -33,119 +32,131 @@
                         <div class="dsmove-card-description">
                             <h3>Motoqueiro Fantamas</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=eH9h_YzTyyY" target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                            alt="Motoqueiro Fantasma">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/i0uajcHH9yogXMfDHpOXexIukG9.jpg"
+                            alt="Peak Blinder">
                         <div class="dsmove-card-description">
-                            <h3>Motoqueiro Fantamas</h3>
+                            <h3>Peak Blinder</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=2nsT9uQPIrk" target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                            alt="Motoqueiro Fantasma">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/30erzlzIOtOK3k3T3BAl1GiVMP1.jpg"
+                            alt="Ruptura Total">
                         <div class="dsmove-card-description">
-                            <h3>Motoqueiro Fantamas</h3>
+                            <h3>Ruptura Total</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=HhesaQXLuRY" target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                            alt="Motoqueiro Fantasma">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/sWgBv7LV2PRoQgkxwlibdGXKz1S.jpg"
+                            alt="The Mandalorian">
                         <div class="dsmove-card-description">
-                            <h3>Motoqueiro Fantamas</h3>
+                            <h3>The Mandalorian</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=rV-BmMbWEj4" target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                            alt="Motoqueiro Fantasma">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/dzOxNbbz1liFzHU1IPvdgUR647b.jpg"
+                            alt="The Boys">
                         <div class="dsmove-card-description">
-                            <h3>Motoqueiro Fantamas</h3>
+                            <h3>The Boys</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=43YeHlEOUCw" target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                            alt="Motoqueiro Fantasma">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/e5iqR3k7azXGK1tGaOLMnKycGku.jpg"
+                            alt="The Wicher">
                         <div class="dsmove-card-description">
-                            <h3>Motoqueiro Fantamas</h3>
+                            <h3>The Wticher</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=tjujvMkqWe4" target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                            alt="Motoqueiro Fantasma">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/yvD1G41HwHgj8afCjmfGbyRmBBR.jpg"
+                            alt="Piratas Do Caribe">
                         <div class="dsmove-card-description">
-                            <h3>Motoqueiro Fantamas</h3>
+                            <h3>Piratas Do Caribe</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=6-NGPgX-uYA" target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                            alt="Motoqueiro Fantasma">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/ARIEA8fMTk8HLy8AyLbKyUjsqC.jpg"
+                            alt="The Simpsons">
                         <div class="dsmove-card-description">
-                            <h3>Motoqueiro Fantamas</h3>
+                            <h3>The Simpsons</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=Pc8ZwPBPxNM" target ="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                            alt="Motoqueiro Fantasma">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/fVzXp3NwovUlLe7fvoRynCmBPNc.jpg"
+                            alt="Homem Aranha">
                         <div class="dsmove-card-description">
-                            <h3>Motoqueiro Fantamas</h3>
+                            <h3>Homem Aranha</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=ae6w0-kZ3-M" target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                            alt="Motoqueiro Fantasma">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/4j0PNHkMr5ax3IA8tjtxcmPU3QT.jpg"
+                            alt="Encanto">
                         <div class="dsmove-card-description">
-                            <h3>Motoqueiro Fantamas</h3>
+                            <h3>Encanto</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=zRMicKd9IH8" target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                            alt="Motoqueiro Fantasma">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/7yEoQq7w8cxaHFBAff5d6NaVxJH.jpg"
+                            alt="Desencanto">
                         <div class="dsmove-card-description">
-                            <h3>Motoqueiro Fantamas</h3>
+                            <h3>Desencanto</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=Dkgw8A-XiO0" target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/cxJHiuynVltsIUfGuKg9ZjvXC3r.jpg"
-                            alt="Motoqueiro Fantasma">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/zT6tXWsJoBOWJT1PeUEKLTFOoHh.jpg"
+                            alt="Final Space!">
                         <div class="dsmove-card-description">
-                            <h3>Motoqueiro Fantamas</h3>
+                            <h3>Final Space</h3>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=4EHbt_kSkG8" target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
