--- a/dsmoviehtml/form.html
+++ b/dsmoviehtml/form.html
@@ -26,15 +26,33 @@
         <section id="dsmvoie-form-section">
 
             <div class="container dsmovie-form-container">
-
                 <div>
                     <div class="dsmovie-card-section">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/aHc765LRg5d5DtoS4LKiGEROWrq.jpg"
                             alt="Motoqueiro Fantasma">
                         <div class="dsmove-card-description-section">
                             <h3>Motoqueiro Fantamas</h3>
-                            <a class="dsmovie-btn-section" href="form.html">Salvar</a>
-                            <a class="dsmovie-btn2-section" href="index.html">Cancelar</a>
+                            <form class="dsmovie-form dsmovie-form-group">
+                                <div class="form-group">
+                                    <label for="email">Informa seu email:</label>
+                                    <input class="form-control" id="email">
+                                </div>
+                                <div class="form-group dsmovie-form-group">
+                                    <label for="score">Informe sua Avaliacao:</label>
+                                    <select class="form-control" name="score" id="score">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                </div>
+                                <div class="dsmovie-btn-container">
+                                    <button type="submit">Salvar</button>
+                                    <a class="dsmovie-btn2-section" href="index.html">Cancelar</a>
+                                </div>
+
+                            </form>
                         </div>
                     </div>
                 </div>
