Avaliacao com estrelas

--- a/dsmoviehtml/index.html
+++ b/dsmoviehtml/index.html
@@ -31,6 +31,13 @@
                             alt="Motoqueiro Fantasma">
                         <div class="dsmove-card-description">
                             <h3>Motoqueiro Fantamas</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
                             <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=eH9h_YzTyyY" target="_blank">Trailer</a>
                         </div>
