--- a/dsmoviehtml/index.html
+++ b/dsmoviehtml/index.html
@@ -39,7 +39,8 @@
                             </div>
                             <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=eH9h_YzTyyY" target="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=eH9h_YzTyyY"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
@@ -50,8 +51,16 @@
                             alt="Peak Blinder">
                         <div class="dsmove-card-description">
                             <h3>Peak Blinder</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=2nsT9uQPIrk" target="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=2nsT9uQPIrk"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
@@ -62,8 +71,16 @@
                             alt="Ruptura Total">
                         <div class="dsmove-card-description">
                             <h3>Ruptura Total</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=HhesaQXLuRY" target="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=HhesaQXLuRY"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
@@ -74,8 +91,16 @@
                             alt="The Mandalorian">
                         <div class="dsmove-card-description">
                             <h3>The Mandalorian</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=rV-BmMbWEj4" target="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=rV-BmMbWEj4"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
@@ -85,8 +110,16 @@
                             alt="The Boys">
                         <div class="dsmove-card-description">
                             <h3>The Boys</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=43YeHlEOUCw" target="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=43YeHlEOUCw"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
@@ -96,8 +129,16 @@
                             alt="The Wicher">
                         <div class="dsmove-card-description">
                             <h3>The Wticher</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=tjujvMkqWe4" target="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=tjujvMkqWe4"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
@@ -107,8 +148,16 @@
                             alt="Piratas Do Caribe">
                         <div class="dsmove-card-description">
                             <h3>Piratas Do Caribe</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=6-NGPgX-uYA" target="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=6-NGPgX-uYA"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
@@ -118,8 +167,16 @@
                             alt="The Simpsons">
                         <div class="dsmove-card-description">
                             <h3>The Simpsons</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=Pc8ZwPBPxNM" target ="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=Pc8ZwPBPxNM"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
@@ -129,8 +186,16 @@
                             alt="Homem Aranha">
                         <div class="dsmove-card-description">
                             <h3>Homem Aranha</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=ae6w0-kZ3-M" target="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=ae6w0-kZ3-M"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
@@ -140,8 +205,16 @@
                             alt="Encanto">
                         <div class="dsmove-card-description">
                             <h3>Encanto</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=zRMicKd9IH8" target="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=zRMicKd9IH8"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
@@ -151,8 +224,16 @@
                             alt="Desencanto">
                         <div class="dsmove-card-description">
                             <h3>Desencanto</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=Dkgw8A-XiO0" target="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=Dkgw8A-XiO0"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
@@ -162,8 +243,16 @@
                             alt="Final Space!">
                         <div class="dsmove-card-description">
                             <h3>Final Space</h3>
+                            <div class="dsmovie-description-bottom">
+                                <h6>3.8</h6>
+                                <img src="img/star-full.svg" alt="star-full">
+                                <img src="img/star-half.svg" alt="star-hald">
+                                <img src="img/star-empty.svg" alt="star-empty">
+                            </div>
+                            <p>10 Avaliacões</p>
                             <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=4EHbt_kSkG8" target="_blank">Trailer</a>
+                            <a class="dsmovie-btn2" href="https://www.youtube.com/watch?v=4EHbt_kSkG8"
+                                target="_blank">Trailer</a>
                         </div>
                     </div>
                 </div>
